--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -31,6 +31,7 @@
 	</controls:Window.LogoContent>
 
 	<controls:Window.Hosts>
+	<toasts:ToastHost Manager="{Binding ToastManager}"/>
 		<dialogs:DialogHost
 			Manager="{Binding DialogManager}"
 			Owner="{Binding RelativeSource={RelativeSource AncestorType=controls:Window}}"
