--- a/Views/ManageEmployeesView.axaml
+++ b/Views/ManageEmployeesView.axaml
@@ -123,7 +123,8 @@
 									FontSize="16"
 									Width="220"
 									Height="40"
-									Padding="20,0,20,0">
+									Padding="20,0,20,0"
+									Command="{Binding ShowAddNewEmployeeDialogCommand}">
 									<!-- Bugged icon || Moving Icon to the left makes it smaller
 										<shadui:ButtonAssist.Icon>
 											<Svg
